# Sample-Gamemode-Server

./: CMakeLists.txt  Makefile
cmake_build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
core/: helloworld.h
core/Account/: Data.h  Database.h  Registeration_Dialogs.h  Registeration_System.h
core/Character/: Character_Registeration_Dialogs.h  Character_Registeration_System.h  Data.h
include/lfile-ini/: iem-ini.h
include/sampgdk/: eventhandler.h  gpci.h  players.h  plugincommon.h  samp.h  timers.h  wrapper.h
include/sampgdk/amx/: amx.h
src/: sample.cpp
src/Account/: Database.cpp  Registeration_Dialogs.cpp  Registeration_System.cpp
src/Character/: Character_Registeration_Dialogs.cpp  Character_Registeration_System.cpp
